Fix minor spacing bug on document bodys

--- a/app/assets/stylesheets/frontend/helpers/_govspeak.scss
+++ b/app/assets/stylesheets/frontend/helpers/_govspeak.scss
@@ -1,11 +1,4 @@
 .govspeak {
-  //position: relative;
-  margin-top: -13px;
-
-  .govspeak {
-    margin-top: 0;
-  }
-
   h2 {
     @include core-27;
     color: lighten($body-text, 20%);
