--- a/app/assets/stylesheets/frontend/views/_policies.scss
+++ b/app/assets/stylesheets/frontend/views/_policies.scss
@@ -74,7 +74,6 @@
   }
 
   .govspeak {
-    margin-top: $gutter!important;
     h2 {
       position: relative;
     }
